--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --env browser *.js*",
-    "fix": "eslint --fix *.js*"
+    "fix": "eslint --fix *.js*",
+    "test": "mocha test/*.js",
+    "test:lint": "npm run lint && npm run test"
   },
   "keywords": [
     "guld",
     "user",
     "identity",
     "config",
-    "environment"
+    "environment",
+    "node"
   ],
   "author": "isysd",
   "license": "MIT",
@@ -34,7 +37,8 @@
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.1.0",
     "mocha": "^5.2.0",
-    "pre-commit": "^1.2.2"
+    "pre-commit": "^1.2.2",
+    "chai": "^4.1.2"
   },
   "pre-commit": [
     "lint"
@@ -43,6 +47,6 @@
   "engines": {
     "node": ">=7"
   },
-  "homepage": "https://github.com/isysd/tech-js-node_modules-guld-pass#readme",
-  "repository": "git@github.com:isysd/tech-js-node_modules-guld-pass.git"
+  "homepage": "https://guld.tech/lib/guld-pass.html",
+  "repository": "https://bitbucket.org/guld/tech-js-node_modules-guld-pass"
 }
